Updated index.html with description and links
Added some information about both the bootcamps, and linked to the course material repo for people to read further.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<html>Coming Soon</html>
+<html>
+  <title>Android Bootcamp</title>  
+
+  <body>
+    <h1>Android Bootcamp</h1>
+    <p>The Android Bootcamp Project consists of two courses.</p>
+    <p>The first is the Beginner's Android Bootcamp. This is aimed at people who want to learn the basics of Android. This is a three day course, and covers the basics of Android, including Activities, Intents, Implicit Activation, Recycler Views and Adapters, Themes, Activity Recreation, Networking and Threading, Fragments, View Pager, and Broadcast Receivers.</p>
+    <p>The second is called Test Driven Development (TDD) on Android. This is aimed at people with intermediate to expert Android knowledge, and who want ot learn how to apply TDD on Android. It covers basics of TDD, MVVM and MVP, separation of business logic on Android, mocking, Espresso and Instrumentation tests, and the basics of Hermetic Testing.</p>
+    <p>More details can be found <a target="_blank" href="https://github.com/androidbootcamp/Course-Material">here</a></p>
+  </body>
+</html>
